AR: modifiche al documento ed a U.C. 10

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -666,7 +666,7 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 \paragraph{Precondizioni} L'utente ha scelto un oggetto presente nel canvas. Non si accettano valori negativi o pari a zero. Se le dimensioni sono superiori a un massimo relativo alla dimensione del canvas il sistema le imposta alla massima dimensione consentita.
 \paragraph{Postcondizioni} Le propriet\` a degli stili grafici della casella di testo indicano che le dimensioni dell'oggetto  sono quelle selezionate. L'oggetto si ingrandir\`a/rimpicciolir\`a  a seconda dei valori interi inseriti.
                    
-\subsubsezione{UC10.10 Caso d'uso: seleziona oggetto}
+\subsubsezione{UC10.10 Caso d'uso: seleziona}
 \paragraph{Attori coinvolti} Utente.
 \paragraph{Scopo e descrizione sintetica} Il sistema consente di selezionare un qualsiasi oggetto presente nel canvas.
 \paragraph{Flusso di eventi}
