ST: metodi e formalismi di specifica

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -180,6 +180,7 @@ Il presente documento \`e redatto utilizzando le convenzioni inserite nel docume
 \subsubsezione{Informativi}
 \sezione{Definizione del prodotto}
 \subsezione{Metodo e formalismo di specifica}
+L'architettura del sistema \`e stata sviluppata secondo un paradigma orientato agli oggetti. Le componenti del sistema e le loro relazioni verranno presentate in questo documento tramite diagrammi standard UML. Verranno presentate prima le componenti ad alto livello, le quali saranno poi descritte in maggiore dettaglio. Saranno inoltre descritti i pattern progettuali utilizzati.
 \subsezione{Presentazione dell'architettura generale del sistema}
 \subsezione{Identificazione dei componenti architetturali di alto livello}
 \sezione{Descrizione dei singoli componenti}
