--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -85,8 +85,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 				\multirow{2}{*}{Pre-RR} & Cunico Marco\\
 										& Dal Bosco Davide\\
 				\hline
-				\multirow{2}{*}{RR-RPP} & \\
-										& \\
+				\multirow{1}{*}{RR-RPP} & Bizzotto Piero\\
+										
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
@@ -110,11 +110,11 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			\multirow{2}{*}{Pre-RR} & Geremia Mirco \\
-									&  \\
+			\multirow{1}{*}{Pre-RR} & Geremia Mirco \\
+									
 			\hline
-			\multirow{2}{*}{RR-RPP} & \\
-									& \\
+			\multirow{1}{*}{RR-RPP} & Geremia Mirco\\
+									
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -150,8 +150,10 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-		1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Cunico Marco \\
-		\hline
+			1.1 & 17/01/2009	Aggiornamento in seguito all'esito della Revisione dei Requisiti & Bizzotto Piero \\
+			\hline
+			1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Cunico Marco \\
+			\hline
           0.9 & 06/12/2008 Inserito secondo incremento e fine stesura del documento & Dal Bosco Davide\\
           \hline
           0.8 & 06/12/2008 Corretti errori di sintassi, impaginazione e inserito il primo incremento & Cunico Marco \\
@@ -194,7 +196,7 @@ Il documento si propone di presentare ai Committenti le scelte effettuate riguar
 
 \sezione{Organigramma}
 In data 15 ottobre 2008 \`e stato costituito il gruppo WebShape formato da sei membri, tutti in possesso delle idoneit\`a necessarie per partecipare al progetto di Ingegneria del Software.
-I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in base alle capacit\`a e alle disponibilit\`a dei componenti del gruppo.\\
+I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in base alle disponibilit\`a dei componenti del gruppo.\\
 
 \subsezione{Accettazione}
 \begin{table}[h]
@@ -272,7 +274,7 @@ Dato che ogni componente del gruppo dovr\`a assumere tutti i ruoli, \`e previsto
 
 \sezione{Pianificazione}
 Per la realizzazione del progetto l'azienda WebShape ha valutato con attenzione i possibili modelli di cicli di vita da utilizzare, tenendo conto di eventuali pregi e difetti. 
-La scelta \`e ricaduta sul modello incrementale, in quanto, vista la tipologia modulare del progetto, si adatta meglio alle esigenze dell'azienda stessa. Con il modello incrementale si ha la possibilit\`a di effettuare dei rilasci di versioni parziali in modo da avvicinarsi incrementalmente al prodotto finale ed effettuare una pianificazione ben definita, che sono dei vantaggi importanti per una nuova azienda. Sono stati invece scartati gli altri modelli: il modello sequenziale, perch\`e troppo orientato ai documenti e per il fatto che il primo prodotto del progetto \` e visionabile solo al termine della Fase di Qualifica; il modello evolutivo, per la necessit\`a di un costante rilascio di versioni; infine il modello a spirale, per l'esigenza di avere continui contatti col cliente.\\
+La scelta \`e ricaduta sul modello incrementale, in quanto, vista la tipologia modulare del progetto, si adatta meglio alle esigenze dell'azienda stessa. Con il modello incrementale si ha la possibilit\`a di effettuare dei rilasci di versioni parziali in modo da avvicinarsi incrementalmente al prodotto finale ed effettuare una pianificazione ben definita, che sono dei vantaggi importanti per una nuova azienda. Sono stati invece scartati gli altri modelli: il modello sequenziale, perch\`e troppo orientato ai documenti e per il fatto che il primo prodotto del progetto \`e visionabile solo al termine della Fase di Qualifica; il modello evolutivo, per la necessit\`a di un costante rilascio di versioni; infine il modello a spirale, per l'esigenza di avere continui contatti col cliente.\\
 \subsezione{Ore e costi totali}
 In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i costi e le ore stimate necessarie per la realizzazione del progetto. Il preventivo considera tutte le fasi di progettazione sostenute dall'azienda.
 
@@ -516,29 +518,29 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 \begin{table}[!h]
 	\begin{center}
 		  \begin{tabular}
-			  {|c|c|c|c|c|c|c|}
+			  {|c|c|c|c|c|c|c|c|}
 		 \hline
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RR - RPP } } \\
-			\multicolumn{7}{|c|}{ \textbf{Preventivo carico persona ore} } \\
+			\multicolumn{8}{|c|}{ \textbf{Preventivo carico persona ore} } \\
 			\hline
-			\textbf{Componente} & \multicolumn{6}{|c|}{ \textbf{RUOLO} } \\
+			\textbf{Componente} & \multicolumn{7}{|c|}{ \textbf{RUOLO} } \\
 			\hline
-			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.} \\
+			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.}  & \textbf{Totale}\\
 			\hline
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-								     %  RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   %
-			Bizzotto Piero &  11   &  15 &  10   &   25  &  11   &  33   \\ % R4
+								     %  RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   % TOTALE
+			Bizzotto Piero &  11   &  15 &  10   &   25  &  11   &  33  &  105 \\ % R4
 			\hline
-			Carollo Mirko &  12   &  15  &  10  &  25   &  9   &  34   \\ % R5
+			Carollo Mirko &  12   &  15  &  10  &  25   &  9   &  34   &  105\\ % R5
 			\hline
-			Cunico Marco    &  11   &  20  &  23   &  24   &  20   &  7   \\ % R2
+			Cunico Marco    &  11   &  20  &  23   &  24   &  20   &  7   &  105\\ % R2
 			\hline
-			Dal Bosco Davide        &  10   &  15   &  10   &  21   &   15  &  34  \\ % R1
+			Dal Bosco Davide        &  10   &  15   &  10   &  21   &   15  &  34  &  105\\ % R1
 			\hline
-			Dissegna Stefano        &  11  &  18   & 22  &  26   &  20  &  8  \\ % R6
+			Dissegna Stefano        &  11  &  18   & 22  &  26   &  20  &  8  &  105\\ % R6
 			\hline
-			Geremia Mirco   &   14  &  10   &  18   &  13  &  15   &  35   \\ % R7
+			Geremia Mirco   &   14  &  10   &  18   &  13  &  15   &  35   &  105\\ % R7
 			\hline		
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
