migliorata risoluzione UC 10

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -537,7 +537,7 @@ Il seguente grafico illustra le interazioni tra l'utente e il sistema per selezi
 \begin{figure}[!ht]
 \centering
 \vspace{20pt} 
-\includegraphics{UC10Espanso}
+\includegraphics{UC10Espanso.jpg}
 \caption{UC10 Caso d'uso: seleziona e modifica}
 \label{uc10}
 \end{figure}
