AR:modificate alcune precondizioni e postcondizioni

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -259,8 +259,8 @@ L'utente pu\`o cancellare totalmente quanto fino a quel momento \`e stato disegn
 \item L'utente seleziona il comando per pulire il canvas. 
 \item Il canvas viene completamente cancellato.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visibile.
-\paragraph{Postcondizioni} Il canvas \`e vuoto.
+\paragraph{Precondizioni} Il canvas \`e visibile all'utente.
+\paragraph{Postcondizioni} Il canvas \`e visibile all'utente ed è vuoto.
 
 \subsubsezione{UC2 Caso d'uso: visualizza manuale}
 \paragraph{Attori coinvolti} Utente.
@@ -311,8 +311,8 @@ Il sistema permette all'utente di ingrandire il canvas ed il suo contenuto mante
 \item Il sistema ingrandisce il canvas di quanto richiesto.
 \item Il sistema centra la visualizzazione nel punto richiesto dall'utente.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas \`e ingrandito nel punto selezionato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato all'utente ad una certa grandezza.
+\paragraph{Postcondizioni} Il canvas \`e ingrandito nel punto selezionato di una certa grandezza a partire dalla grandezza iniziale.
 
 \subsubsezione{UC6 Caso d'uso: diminuisci zoom}
 \paragraph{Attori coinvolti} Utente.
@@ -325,8 +325,8 @@ Il sistema permette all'utente di rimpicciolire il canvas ed il suo contenuto ma
 \item Il sistema rimpicciolisce il canvas di quanto richiesto.
 \item Il sistema accentra la visualizzazione dove richiesto dall'utente.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas \`e rimpicciolito nel punto selezionato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato all'utente ad una certa grandezza.
+\paragraph{Postcondizioni} Il canvas \`e rimpicciolito nel punto selezionato di una certa grandezza a partire dalla grandezza iniziale.
 
 \subsubsezione{UC7 Caso d'uso: esporta in SVG}
 \paragraph{Attori coinvolti} Utente.
@@ -338,7 +338,7 @@ Il sistema permette all'utente di esportare in formato di immagine SVG il conten
 \item Il sistema genera un file SVG il cui contenuto corrisponde a quanto correntemente visualizzato nel canvas.
 \item Il sistema rende disponibile all'utente il file generato.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato con le modifiche effettuate dall'utente.
 \paragraph{Postcondizioni} Il file SVG \`e disponibile all'utente e contiene quanto visualizzato nel canvas.
 
 \subsubsezione{UC8 Caso d'uso: carica file SVG}
@@ -353,8 +353,8 @@ Il sistema permette all'utente di caricare file in formato SVG nel canvas.
 \end{elenconumerato}
 \paragraph{Flusso alternativo}
 Se il file non pu\`o essere caricato a causa di un errore in lettura o perch\`e non \`e un file SVG, l'utente verr\`a avvisato dell'errore e l'applicazione ritorner\`a allo stato precedente l'esecuzione del comando.
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas contiene la visualizzazione del file SVG selezionato dall'utente ed \`e modificabile.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas contiene la visualizzazione del file SVG selezionato dall'utente ed \`e modificabile. In caso di modifiche al canvas precedenti al caricamento del file SVG, queste sono ignorate.
 
 \subsubsezione{UC9 Caso d'uso: disegna}
 Si rimanda a \ref{ucdisegna} per una descrizione approfondita.
@@ -385,8 +385,8 @@ Il sistema permette all'utente di disegnare una linea retta o una curva di Bezie
 \item L'utente disegna sul canvas la linea retta con due clic distinti, oppure la curva di Bezier tenendo premuto il pulsante sinistro del mouse.
 \item Il sistema disegna la linea/curva.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra la nuova retta/curva disegnata.
+\paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova retta/curva disegnata.
 
 \subsubsezione{UC9.2 Caso d'uso: disegna quadrato/rettangolo}
 \paragraph{Attori coinvolti} Utente.
@@ -398,8 +398,8 @@ Il sistema permette all'utente di disegnare un quadrato o un rettangolo di quals
 \item L'utente disegna sul canvas il quadrato o il rettangolo, regolando col cursore la sua dimensione.
 \item Il sistema disegna il quadrato/rettangolo.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra il nuovo quadrato/rettangolo disegnato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo quadrato/rettangolo disegnato.
 
 \subsubsezione{UC9.3 Caso d'uso: disegna poligono}
 \paragraph{Attori coinvolti} Utente.
@@ -412,8 +412,8 @@ Il sistema permette all'utente di disegnare un poligono di qualsiasi dimensione 
 \item L'utente disegna sul canvas il poligono, regolando col cursore la sua dimensione.
 \item Il sistema disegna il poligono.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra il nuovo poligono disegnato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo poligono disegnato.
 
 \subsubsezione{UC9.4 Caso d'uso: disegna cerchio/ellisse}
 \paragraph{Attori coinvolti} Utente.
@@ -425,8 +425,8 @@ Il sistema permette all'utente di disegnare un cerchio o un'ellisse di qualsiasi
 \item L'utente disegna sul canvas il cerchio o l'ellisse, regolando col cursore la sua dimensione.
 \item Il sistema disegna il cerchio o l'ellisse.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra il nuovo cerchio o la nuova ellisse disegnato/a.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo cerchio o la nuova ellisse disegnato/a.
 
 \subsubsezione{UC9.5 Caso d'uso: disegna casella di testo}
 \paragraph{Attori coinvolti} Utente.
@@ -439,8 +439,8 @@ Il sistema permette all'utente di disegnare una casella di testo.
 \item L'utente scrive il testo all'interno della casella.
 \item Il sistema disegna la casella di testo.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra la nuova casella di testo disegnata.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova casella di testo disegnata.
 
 \subsubsezione{UC9.6 Caso d'uso: seleziona colore bordo/linea}
 \paragraph{Attori coinvolti} Utente.
@@ -451,8 +451,8 @@ Il sistema permette all'utente di selezionare il colore del bordo della figura d
 \item L'utente seleziona il colore dalla paletta.
 \item Il sistema imposta il colore dato dall'utente come base per la figura da disegnare.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas \`e visualizzato. La prossima figura verr\` a disegnata con il colore del bordo selezionato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione. La prossima figura verr\` a disegnata con il colore del bordo selezionato.
 
 \subsubsezione{UC9.7 Caso d'uso: seleziona colore riempimento}
 \paragraph{Attori coinvolti} Utente.
@@ -463,8 +463,8 @@ Il sistema permette all'utente di selezionare il colore di riempimento del polig
 \item L'utente seleziona il colore di riempimento del poligono dalla paletta.
 \item Il sistema imposta il colore dato dall'utente come base per la figura da disegnare.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas \`e visualizzato. La prossima figura verr\` a disegnata con il colore di riempimento selezionato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione. La prossima figura verr\` a disegnata con il colore di riempimento selezionato.
 
 \subsubsezione{UC9.8 Caso d'uso: selezione font e dimensione carattere}
 \paragraph{Attori coinvolti} Utente.
@@ -475,8 +475,8 @@ Il sistema permette all'utente di selezionare il tipo e la dimensione del caratt
 \item L'utente seleziona il tipo di carattere e la sua dimensione.
 \item Il sistema imposta i valori dati dall'utente come base per la prossima casella di testo da disegnare.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas \`e visualizzato. La prossima casella di testo verr\` a disegnata con i parametri selezionati.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione. La prossima casella di testo verr\` a disegnata con i parametri selezionati.
 
 \subsubsezione{UC9.9 Caso d'uso: disegna spirale}
 \paragraph{Attori coinvolti} Utente.
@@ -488,8 +488,8 @@ Il sistema permette all'utente di disegnare una spirale.
 \item L'utente disegna la spirale sul canvas, regolando col cursore la sua ampiezza.
 \item Il sistema disegna la spirale.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra la nuova spirale disegnata.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova spirale disegnata.
 
 \subsubsezione{UC9.10 Caso d'uso: disegno di linee a mano libera}
 \paragraph{Attori coinvolti} Utente.
@@ -501,8 +501,8 @@ Il sistema permette all'utente di disegnare linee a mano libera.
 \item L'utente disegna la linea a mano libera sul canvas, trascinando il cursore.
 \item Il sistema disegna la linea creata.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra la nuova linea a mano libera.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova linea a mano libera.
 
 \subsubsezione{UC9.11 Caso d'uso: disegno calligrafico}
 \paragraph{Attori coinvolti} Utente.
@@ -514,8 +514,8 @@ Il sistema permette all'utente di creare linee calligrafiche che emulano l'azion
 \item L'utente disegna la linea calligrafica sul canvas, trascinando il cursore.
 \item Il sistema disegna la linea creata.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra la nuova linea calligrafica.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova linea calligrafica.
 
 \subsubsezione{UC9.12 Caso d'uso: disegno connettori di diagrammi}
 \paragraph{Attori coinvolti} Utente.
@@ -527,8 +527,8 @@ Il sistema permette all'utente di disegnare dei connettori di diagrammi.
 \item L'utente disegna il connettore sul canvas, cliccando su punto d'inizio e punto di fine linea desiderati.
 \item Il sistema disegna il connettore creato.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visualizzato.
-\paragraph{Postcondizioni} Il canvas mostra il nuovo connettore creato.
+\paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
+\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo connettore creato.
 \newpage
 \subsezione{Vista UC10 - Seleziona e Modifica}
 \label{ucselezionaemodifica}
