--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -196,7 +196,27 @@ contenente un documento SVG valido e viceversa.
 Sia \textit{FigureSet} sia \textit{Figure} implementano l'interfaccia \textit{SVGWritable}, che rappresenta un qualsiasi elemento, o insieme di elementi, convertibile in SVG. La conversione avviene tramite il metodo \textit{toSVG}. La conversione dipende dalla classe coinvolta. La classe \textit{FigureSet} dovr\`a creare un documento SVG vuoto e richiamare il metodo \textit{toSVG} su tutte le figure contenute, le quali genereranno gli elementi SVG necessari alla propria rappresentazione. Per creare un documento SVG si istanzia la classe \textit{SVGGenerator}, la quale offre dei metodi per generare comandi SVG. Quando tutte le figure hanno avuto la possibilit\`a di inserirsi nel documento SVG, il metodo \textit{flush} chiude il documento e lo ritorna sotto forma di stringa.
 \paragraph{Da SVG a \textit{FigureSet}}
 L'importazione di un file SVG viene gestita dalla classe \textit{SVGReader} attraverso il metodo \textit{read}, che riceve un documento SVG valido sotto forma di stringa e restituisce un'istanza di \textit{FigureSet} corrispondente. Viene fatto il parsing del documento come \textit{XML} attraverso la classe \textit{XMLParser}, e per ogni comando SVG viene creato un'istanza di \textit{SVGTag} che lo rappresenta. Il nome del tag verr\`a usato come indice dal metodo \textit{makeFigureClassFromTag} della classe \textit{SVGElementRegistry}, che costruir\`a un'istanza della classe corrispondente. Su quest'istanza verr\`a invocato il metodo \textit{fromSVG}, il quale \`e responsabile di inizializzare la classe a partire dal tag. Per associare una classe al nome di un tag si usa il metodo \textit{register}. La classe registrata deve implementare l'interfaccia \textit{SVGReadable}. 
-\sezione{Descrizione dei singoli componenti}
+\sezione{Descrizione dei singoli componenti}\
+\subsezione{Figure}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Classe astratta che rappresenta una figura generica nel sistema, ovvero un oggetto disegnabile nel canvas.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Mantiene un'istanza della classe \textit{BoundingRectangle} per rappresentare i limiti della figura. Contiene anche un'istanza di \textit{Colour} che rappresenta il colore del bordo, e un'istanza di \textit{Opacity} che rappresenta l'opacit\`a della figura.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Offre un metodo astratto \textit{draw} per disegnare la figura sul canvas, e un metodo \textit{getMainPoints} che verr\`a usato per evidenziare i punti della figura manipolabili dall'utente.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+Gestisce le propriet\`a comuni a qualsiasi figura, e permette di selzionare o deselezionare la figura.
+
+\subsezione{FigureSet}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Rappresenta un collezione di figure.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Contiene le istanze di \textit{Figure} correntemente attive.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Permette si selezionare una figura a partire da un punto tramite il metodo \textit{selectFigure}. Viene selezionata la figura che contiene quel punto, se esiste. Permette di applicare un'operazione ad ogni figura tramite il metodo\textit{each}. Implementa \textit{SVGWritable}.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+Gestisce le figure attive, permettendone l'aggiunta, la selezione o la cancellazione.
+
 \subsezione{Tipo, obiettivo e funzione del componente}
 \subsezione{Relazioni d'uso di altre componenti}
 \subsezione{Interfacce e relazioni di uso da altre componenti}
