--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -42,7 +42,7 @@
 	\end{Huge}
 			\\
 \end{center}
-\vspace{210pt}
+\vspace{190pt}
 \begin{center}
 Versione: \insertversion
 \end{center}
@@ -185,10 +185,10 @@ L'architettura del sistema \`e stata sviluppata secondo un paradigma orientato a
 \subsezione{Identificazione dei componenti architetturali di alto livello}
 \subsubsezione{Logica interna}
 Questo sottosistema si divide in tre ulteriori sottosistemi
-\subsubsubsezione{Gestione figure}
+\subsubsezione{Gestione figure}
 [inserire diagramma delle classi] \\
 Si occupa della gestione interna delle figure disegnabili e manipolabili dall'utente e delle relative propriet\`a. Il termine \textit{figura} in questo contesto include anche i testi disegnati sul canvas. La classe \textit{Figure} rappresenta una figura qualsiasi. Ogni figura contiene un \textit{BoundingRectangle} che rappresenta la cornice entro cui la figura \`e completamente contenuta. Una figura pu\`o essere selezionata oppure no. Le classi che implementano \textit{Figure} sono responsabili di disegnarsi sul canvas implementando il metodo \textit{draw}. In questo metodo, non si dovr\`a tener conto dell'area correntemente visualizzata o del livello di zoom, in quanto gestiti in modo trasparente dalla classe \textit{Visualization}. Ad ogni figura \`e associato un insieme di punti significativi, come ad esempio i vertici in un quadrato, ottenibili tramite il metodo \textit{getMainPoints}. Ogni figura mantiene un colore del bordo, rappresentato dalla class \textit{Colour}. Le classi \textit{Circle} e \textit{Polygon} aggiungono un ulteriore colore per il riempimento, rappresentato dalla classe \textit{FillColour}. La classe \textit{Text} rappresenta un testo disegnato dall'utente, e mantiene delle propriet\`a aggregate dalla classe \textit{TextStyle}. A fini implementativi, le propriet\`a del testo e del colore andranno rappresentate secondo lo standard \textit{CSS}, quindi le suddette propriet\`a dovranno implementare l'interfaccia \textit{CSSProperty} che offre il metodo \textit{toCSS} responsabile della conversione dalla rappresentazione interna a quella \textit{CSS}. La classe \textit{FigureSet} mantiene l'insieme delle istanze di \textit{Figure} correntemente disegnate dall'utente e offre la possibilit\`a di selezionarne una a partire da un punto sul canvas.
-\subsubsubsezione{Conversione in \textit{SVG}}
+\subsubsezione{Conversione in \textit{SVG}}
 [inserire diagramma delle classi] \\
 Si occupa di trasformare il \textit{FigureSet} corrente in una stringa 
 contenente un documento SVG valido e viceversa. 
