aggiunti nuovi termini

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -82,7 +82,7 @@ Versione: \insertversion
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%		
 				{Pre-RR} &  Bizzotto Piero \\ & Geremia Mirco \\
 				\hline
-				{RR-RPP} & \\
+				{RR-RPP} &  Cunico Marco \\ & \\
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
@@ -140,7 +140,8 @@ Versione: \insertversion
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-		
+		    1.1 & 20$\slash$01$\slash$2009  Aggiunta altri termini & Cunico Marco \\
+			\hline
 			1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio & Bizzotto Piero \\
 			\hline
 			0.3  &    08$\slash$12$\slash$2008 Aggiunta altri termini & Geremia Mirco \\
@@ -161,15 +162,41 @@ Versione: \insertversion
 
 \newpage
 
+\section*{A}
+\hypertarget{ajax}{}
+\textbf{Ajax:}
+acronimo di Asynchronous \hyperlink{javascript}{\underline{JavaScript}} and \hyperlink{xml}{\underline{XML}}, \` e uno strumento di sviluppo per la realizzazione di applicazioni web interattive. La tecnologia AJAX si basa su uno scambio di dati in background fra web browser e server, che consente l'aggiornamento dinamico di una pagina web senza esplicito ricaricamento da parte dell'utente. Normalmente le funzioni richiamate sono scritte con il linguaggio \hyperlink{javascript}{\underline{JavaScript}}.\\
+
+\section*{B}
+\hypertarget{browser}{}
+\textbf{Browser:}
+Un browser web \` e un programma che consente agli utenti di visualizzare e interagire con testi, immagini e altre informazioni, tipicamente contenute in una pagina web di un sito (o all'interno di una rete locale).
+Il browser \` e in grado di interpretare il codice \hyperlink{html}{\underline{HTML}} e visualizzarlo in forma di ipertesto. Il browser consente perci\` o la navigazione nel web.\\
+
 \section*{C}
 \hypertarget{canvas}{}
 \textbf{Canvas:}
-Canvas \` e una estensione dell'HTML standard che permette il rendering dinamico di immagini bitmap gestibili attraverso un linguaggio di scripting.  Consiste in una regione disegnabile, definita in codice HTML con gli attributi \textit{height} and \textit{width}. Il codice \hyperlink{javascript}{\underline{JavaScript}} pu\`o accedere all'area con un set completo di funzioni per il disegno, simili a quelle comuni ad altre API 2D, permettendo cos\`i la generazione dinamica di disegni.\\
+Canvas \` e una estensione dell'\hyperlink{html}{\underline{HTML}} standard che permette il rendering dinamico di immagini bitmap gestibili attraverso un linguaggio di scripting.  Consiste in una regione disegnabile, definita in codice HTML con gli attributi \textit{height} and \textit{width}. Il codice \hyperlink{javascript}{\underline{JavaScript}} pu\`o accedere all'area con un set completo di funzioni per il disegno, simili a quelle comuni ad altre API 2D, permettendo cos\`i la generazione dinamica di disegni.\\
+
+\hypertarget{client}{}
+\textbf{Client:}
+indica una componente che accede ai servizi o alle risorse di un'altra componente, detta \hyperlink{server}{\underline{server}}.\\
 
 \section*{E}
 \hypertarget{ecmascript}{}
 \textbf{ECMAScript:}
 \text Si veda \hyperlink{javascript}{\underline{JavaScript}}.\\
+
+\section*{G}
+\hypertarget{gantt}{}
+\textbf{Gantt:}
+\` e uno strumento di supporto alla gestione dei progetti a rappresentazione temporale delle mansioni o attivit\`a che costituiscono il progetto. \\
+
+\section*{H}
+\hypertarget{html}{}
+\textbf{HTML:}
+\` e un linguaggio usato per descrivere la struttura dei documenti ipertestuali disponibili nel \hyperlink{www}{\underline{World Wide Web}}.
+L'HTML non \` e un linguaggio di programmazione, ma un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}}, ossia descrive il contenuto, testuale e non, di una pagina web.\\
 
 \section*{J}
 \hypertarget{javascript}{}
@@ -202,6 +229,10 @@ RGB (Red, Green, Blue) \`e  il nome di un modello di colori di tipo additivo che
 Un'immagine pu\`o  infatti essere scomposta, attraverso filtri o altre tecniche, in questi colori base che, miscelati tra loro, danno quasi tutto lo spettro dei colori visibili, con l'eccezione delle porpore.
 
 \section*{S}
+\hypertarget{server}{}
+\textbf{Server:}
+\`e una componente informatica software o hardware che fornisce servizi ad altre componenti chiamate \hyperlink{client}{\underline{client}} attraverso una rete. \\
+
 \hypertarget{svg}{}
 \textbf{SVG:}
 L' SVG (Scalable Vector Graphics) \` indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
@@ -211,9 +242,18 @@ L' SVG (Scalable Vector Graphics) \` indica una tecnologia in grado di visualizz
 \textbf{W3C:}
 Il W3C \`e un'associazione internazionale fondata nel 1994 con lo scopo di migliorare i protocolli ed i linguaggi del Web. Pur non essendo un organismo di standardizzazione, le raccomandazioni fornite dal W3C sono spesso trattate come standard.\\
 
+\hypertarget{web}{}
+\textbf{Web:}
+Si veda \hyperlink{www}{\underline{WWW}}.\\
+
 \hypertarget{wiki}{}
 \textbf{Wiki:}
 Un wiki \`e un sistema che permette di gestire pagine web in maniera collaborativa favorendo la codivisione di informazioni tra gli utenti; in un wiki ognuno pu\`o aggiungere o modificare i contenuti di una pagina attraverso il browser.\\
+
+\hypertarget{www}{}
+\textbf{WWW:}
+\`e uno dei servizi di Internet, la pi\`u grande rete di computer rete di computer mondiale e ad accesso pubblico attualmente esistente.
+Creata da Tim Berners-Lee, il servizio mette a disposizione degli utenti uno spazio elettronico e digitale per la pubblicazione di contenuti multimediali oltre che un mezzo per la distribuzione di software e la fornitura di servizi particolari sviluppati dagli stessi utenti. \\
 
 \section*{X}
 \hypertarget{xml}{}
